--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <h1>Lessons js Module-4</h1>
 
-  <!-- <script src="./js/task-1.js"></script> -->
-  <!-- <script src="./js/task-2.js"></script> -->
+  <script src="./js/task-1.js"></script>
+  <script src="./js/task-2.js"></script>
   <script src="./js/task-3.js"></script>
 </body>
 
